# trellis-datamodel

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  Tutorial.md  config.yaml  config.yml  ontology.yml  package-lock.json  package.json  pyproject.toml  todo.txt  trellis.yml  trellis.yml.backup  trellis.yml.example
.cursor/: project.md  source-systems-fix.md
.cursor/commands/: create_pr.md  execute.md  plan-tasks.md  spar-idea.md
.cursor/plans/: create_company_dummy_project_6de6a847.plan.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/cla/: signatures.json
.github/workflows/: ci.yml  cla.yml  publish.yml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
backend/: config.py  main.py  verify_config.py
backend/adapters/: __init__.py  base.py  dbt_core.py
backend/models/: schemas.py
backend/routes/: __init__.py  data_model.py  dbt_schema.py  manifest.py  schema.py
backend/tests/: conftest.py  test_data_model.py  test_dbt_schema.py  test_yaml_handler.py
backend/utils/: yaml_handler.py
company_dummy/: generate_data.py
dbt_built/: canvas_layout.yml  data_model.yml  dbt_project.yml  nba.duckdb  ontology.yml  profiles.yml
dbt_company_dummy/: .gitignore  README.md  canvas_layout.yml  data_model.yml  dbt_project.yml  generate_data.py  profiles.yml
dbt_company_dummy/models/: exposures.yml
dbt_company_dummy_entity/: .user.yml  canvas_layout.yml  data_model.yml  data_model_entity.yml  dbt_project.yml  profiles.yml  trellis.yml
dbt_company_dummy_entity/data/: customer.csv  customer_invoice.csv  department.csv  employee.csv  inventory.csv  purchase_order_item.csv  supplier.csv
dbt_company_dummy_kimball/: .user.yml  business_events.yml  canvas_layout.yml  data_model.yml  data_model_kimball.yml  dbt_project.yml  profiles.yml
dbt_company_dummy_kimball/data/: lead.csv  order.csv  order_item.csv  products.csv  purchase_order.csv  supplier_invoice.csv
dbt_company_dummy_kimball/models/: data  exposures_kimball.yml
dbt_concept/: canvas_layout.yml  data_model.yml  ontology.yml
dbt_concept_backup/: data_model.yml
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/tests/: bus-matrix.spec.ts  business-events.spec.ts  canvas.spec.ts  canvas_layout.yml  config-reload.spec.ts  entity-type-badge.spec.ts  example.spec.ts  exposures-e2e.spec.ts  exposures.spec.ts  filters.spec.ts  global-setup.ts  global-teardown.ts  helpers.ts  layout.spec.ts  lineage.spec.ts  relationships.spec.ts  sidebar.spec.ts  smart-positioning.spec.ts  smoke.spec.ts  vitest-setup.ts
nba-data/: data.py  pull_data.py
nba-data/data/: game_stats_2025-01.csv  game_stats_2025-02.csv  game_stats_2025-03.csv  game_stats_2025-04.csv  game_stats_2025-10.csv  game_stats_2025-11.csv  games.csv  players.csv  teams.csv
scripts/: check_version.py
specs/2026-01-14-config-ui/: .gitkeep  (+2 more)
trellis_datamodel/: __init__.py  cli.py  config.py  exceptions.py  init_wizard.py  server.py
(+332 files in other folders)
