[project]
name = "data-model-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core==1.10",
    "dbt-duckdb==1.10",
    "duckdb>=1.4.2",
    "fastapi>=0.121.3",
    "marimo>=0.18.0",
    "nba-api>=1.11.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
